--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "./",
-  "name": "achraf_mechhour_portfolio",
+  "name": "electric",
   "version": "0.1.0",
   "private": true,
   "main": "index.js",
